--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </td>
 
         <td valign="top" style="height: 500px; padding:0px" bgcolor="#d2d8c7">
-        <img src="C:\Users\ASUS\Desktop\owner.PNG" height="200px" 
+        <img src="owner.PNG" height="200px" 
         width="650px" alt="restaurant image"> 
 
         <P style="padding: 6px 10px">
@@ -55,9 +55,9 @@
         </td>
             
         <td width="25%" valign="top" bgcolor="#cde1fd">
-        <img src="C:\Users\ASUS\Desktop\ali baba cave.jpg" height="250" width="100%"> 
+        <img src="ali baba cave.jpg" height="250" width="100%"> 
 
-        <img src="C:\Users\ASUS\Desktop\ali image 5.jpg" height="250" width="100%">
+        <img src="ali image 5.jpg" height="250" width="100%">
 
         </td>
 
